[gd_scene load_steps=3 format=3 uid="uid://bmq2wblu6rm0c"]

[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_6xeqs"]
[ext_resource type="AudioStream" uid="uid://6mskie2g3clb" path="res://Assets/Aseprite/Pixel Blast.mp3" id="2_pt15r"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xeqs")

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -25.0
offset_right = 99.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ShootOption" type="Label" parent="OptionsContainer/HBoxContainer"]
layout_mode = 2
text = "Shoot:
"

[node name="ShootOptionButton" type="Label" parent="OptionsContainer/HBoxContainer"]
layout_mode = 2
text = "Left Mouse Button
"

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="AimOption" type="Label" parent="OptionsContainer/HBoxContainer2"]
layout_mode = 2
text = "Aim:   
"

[node name="AimOptionButton" type="Label" parent="OptionsContainer/HBoxContainer2"]
layout_mode = 2
text = "Follows Mouse
"

[node name="BackButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0015625
anchor_top = 0.000925926
anchor_right = 0.040625
anchor_bottom = 0.0296296
offset_left = 12.0
offset_top = 14.0
offset_right = 12.0
offset_bottom = 14.0
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="BackButtonContainer"]
layout_mode = 2
text = "< Back"

[node name="MusicVolumeSliderContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = -90.0
offset_right = 178.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicVolumeSlider" type="HSlider" parent="MusicVolumeSliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
value = 1.0

[node name="Music Volume" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -113.0
offset_right = -68.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
text = "Music volume:"

[node name="GameVolumeSliderContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -150.0
offset_right = 179.5
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameVolumeSlider" type="HSlider" parent="GameVolumeSliderContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
value = 1.0

[node name="Game Volume" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -173.0
offset_right = -68.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
text = "Game volume:"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pt15r")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="BackButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="MusicVolumeSliderContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="GameVolumeSliderContainer2/GameVolumeSlider" to="." method="_on_game_volume_slider_value_changed"]
